...
                    ),
                  ],
                ),
                const SizedBox(height: 24),
                PillTextField(
                  controller: cpfController,
                  hint: 'CPF',
                  keyboardType: TextInputType.number,
                  inputFormatters: [CpfInputFormatter()],
                ),
                const SizedBox(height: 16),
                PillTextField(
                  controller: passwordController,
                  hint: 'Senha',
                  obscureText: true,
                ),
                const SizedBox(height: 16),
                Row(
                  children: [
                    SizedBox(
...
